2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/aacparse/gstaacparse.c: (plugin_init):
	Don't autoplug aacparse until it works.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_jitter_buffer_sink_parse_caps),
	(gst_rtp_jitter_buffer_flush_stop), (gst_rtp_jitter_buffer_chain):
	* gst/rtpmanager/rtpjitterbuffer.c: (rtp_jitter_buffer_reset_skew),
	(calculate_skew):
	Small cleanups and some more debug info.

2008-11-13  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/Makefile.am:
	* tests/check/elements/aacparse.c:
	* tests/check/elements/amrparse.c:
	  Add unit tests for new parsers.

2008-11-13  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/gst-plugins-bad-plugins.hierarchy:
	* docs/plugins/gst-plugins-bad-plugins.interfaces:
	* docs/plugins/gst-plugins-bad-plugins.prerequisites:
	* docs/plugins/inspect/plugin-aacparse.xml:
	* docs/plugins/inspect/plugin-amrparse.xml:
	  Update docs.

2008-11-13  Stefan Kost  <ensonic@users.sf.net>

	* gst/aacparse/gstbaseparse.c:
	* gst/amrparse/gstbaseparse.c:
	  Fix baseparse type name.

2008-11-13  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* gst/aacparse/Makefile.am:
	* gst/aacparse/gstaacparse.c:
	* gst/aacparse/gstaacparse.h:
	* gst/aacparse/gstbaseparse.c:
	* gst/aacparse/gstbaseparse.h:
	* gst/amrparse/Makefile.am:
	* gst/amrparse/gstamrparse.c:
	* gst/amrparse/gstamrparse.h:
	* gst/amrparse/gstbaseparse.c:
	* gst/amrparse/gstbaseparse.h:
	  Add two new baseparse based parsers (aac and amr) from Bug #518857.

2008-11-12  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/librfb/rfbdecoder.c:
	Fix uninitialized warnings

2008-11-11  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* tests/check/Makefile.am:
	* tests/check/elements/qtmux.c: (setup_src_pad),